plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.6.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group 'uk.gov.digital.ho.hocs'
version '1.0-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url 'https://artifactory.digital.homeoffice.gov.uk/artifactory/DECS/'
        credentials {
            username System.getenv('ARTIFACTORY_USER')
            password System.getenv('ARTIFACTORY_TOKEN')
        }
    }
}

plugins.withType(JacocoPlugin) {
    tasks["test"].finalizedBy 'jacocoTestReport'
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        html.required = false
        csv.required = false
        //for XML
        xml.destination file("${buildDir}/reports/jacoco.xml")
    }
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }

    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'

    implementation 'uk.gov.digital.ho.hocs:hocs-ukvi-complaint-schema:1.0.0'

    implementation 'com.jayway.jsonpath:json-path:2.6.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.6.RELEASE'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.springframework:spring-context-indexer:5.3.14'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.awaitility:awaitility:4.1.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'com.google.code.tempus-fugit:tempus-fugit:1.1'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.0"
    }
}

jar {
    enabled = false
}
